[package]
name = "woonters_site_v2"
version = "0.1.0"
authors = ["Woonters <woonters@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
image = "0.25.6"
# ratzilla = { git = "https://github.com/junkdog/ratzilla", branch = "beamterm-update" }
ratzilla = "0.1.0"
tachyonfx = {version="0.16.0", default-features= false, features = ["web-time"]}
web-sys = {version="0.3.77", features=["HtmlImageElement"]}
